kubernetes/apps/mariadb/phpmyadmin/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: phpmyadmin
    app.kubernetes.io/instance: phpmyadmin
    app.kubernetes.io/name: phpmyadmin
  name: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
        app.kubernetes.io/name: phpmyadmin
    spec:
      containers:
        - image: phpmyadmin/phpmyadmin:5.2.2
          name: phpmyadmin
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
