kubernetes/apps/mariadb/phpmyadmin/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phpmyadmin
  name: phpmyadmin
spec:
  ports:
    - name: "phpmyadmin"
      port: 80
      targetPort: 80
  selector:
    app: phpmyadmin
