kubernetes/apps/mariadb/phpmyadmin/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: phpmyadmin
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`phpmyadmin.f9.casa`)
      kind: Rule
      services:
        - name: phpmyadmin
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
